--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -15,14 +15,14 @@ body {
 }
 
 a {
-  color: #9b9b9b;
+  color: #fefefe;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 a:active,
 a:hover {
-  color: #000;
+  color: #dadada;
 }
 
 .youtube-container {
